--- a/src/app/biceps/biceps.component.html
+++ b/src/app/biceps/biceps.component.html
@@ -1,18 +1,35 @@
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Type</th>
-    <th>Muscle</th>
-    <th>Equipment</th>
-    <th>Dificulty</th>
-    <th>Instruction</th>
-  </tr>
-  <tr *ngFor="let item of result">
-    <td>{{item.name}}</td>
-    <td>{{item.type}}</td>
-    <td>{{item.muscle}}</td>
-    <td>{{item.equipment}}</td>
-    <td>{{item.difficulty}}</td>
-    <td>{{item.instructions}}</td>
-  </tr>
-</table>
+<div class="container-fluid">
+ <div class="card">
+  <div class="card-heder">
+  <div class="row">
+  <div class="col-md-4"></div>   <div class="col-md-8"><h1 class="text-success">Exercises List</h1></div>
+  </div>
+  </div>
+  <div class="card-body">
+    <div class="row ml-2">
+    <table class="table table-striped table-bordered table-secondary">
+      <thead>
+        <tr>
+          <th >Name</th>
+          <th>Type</th>
+          <th>Muscle</th>
+          <th>Difficulty</th>
+          <th>Equipment</th>
+          <th>Instructions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of result ">
+          <td>{{item.name}}</td>
+          <td>{{item.type}}</td>
+          <td>{{item.muscle}}</td>
+          <td>{{item.difficulty}}</td>
+          <td>{{item.equipment}}</td>
+          <td>{{item.instructions}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  </div>
+ </div>
+</div>
