--- a/src/app/exercice-physique/biceps/biceps.component.html
+++ b/src/app/exercice-physique/biceps/biceps.component.html
@@ -2,7 +2,7 @@
  <div class="card">
   <div class="card-heder">
   <div class="row">
-  <div class="col-md-4"></div>   <div class="col-md-8"><h1 class="text-success">Exercises List</h1></div>
+  <div class="col-md-4"></div>   <div class="col-md-8"><h1 class="text-success">List</h1></div>
   </div>
   </div>
   <div class="card-body">
